[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/imagens/item_01.png" type="Texture" id=3]
[ext_resource path="res://assets/sons/dano.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sons/game_over.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sons/motor.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 28.75 )

[node name="principal" type="Node2D"]

[node name="placar" type="Label" parent="."]
margin_left = 13.0
margin_top = 15.0
margin_right = 163.0
margin_bottom = 49.0

[node name="item_01" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="item_01"]
position = Vector2( 421, 371 )
scale = Vector2( 0.545775, 0.460526 )
texture = ExtResource( 3 )
offset = Vector2( -228.299, -118.343 )

[node name="colisao_item_01" type="CollisionPolygon2D" parent="item_01"]
position = Vector2( 237, 164 )
polygon = PoolVector2Array( 40, 150, 40, 145, 42, 143, 46, 143, 53, 143, 56, 139, 60, 136, 64, 136, 66, 138, 68, 142, 69, 148, 72, 149, 78, 153, 78, 158, 77, 159, 71, 160, 71, 166, 69, 170, 66, 171, 60, 168, 56, 164, 48, 166, 43, 166, 41, 164, 42, 159, 44, 155 )

[node name="item_02" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="item_02"]
position = Vector2( 420.4, 245.5 )
scale = Vector2( 0.545775, 0.460526 )
texture = ExtResource( 3 )
offset = Vector2( -228.299, -118.343 )

[node name="colisao_item_02" type="CollisionPolygon2D" parent="item_02"]
position = Vector2( 237.4, 38.5 )
polygon = PoolVector2Array( 40, 150, 40, 145, 42, 143, 46, 143, 53, 143, 56, 139, 60, 136, 64, 136, 66, 138, 68, 142, 69, 148, 72, 149, 78, 153, 78, 158, 77, 159, 71, 160, 71, 166, 69, 170, 66, 171, 60, 168, 56, 164, 48, 166, 43, 166, 41, 164, 42, 159, 44, 155 )

[node name="item_03" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="item_03"]
position = Vector2( 424.4, 109.5 )
scale = Vector2( 0.545775, 0.460526 )
texture = ExtResource( 3 )
offset = Vector2( -228.299, -118.343 )

[node name="colisao_item_03" type="CollisionPolygon2D" parent="item_03"]
position = Vector2( 240.4, -97.5 )
polygon = PoolVector2Array( 40, 150, 40, 145, 42, 143, 46, 143, 53, 143, 56, 139, 60, 136, 64, 136, 66, 138, 68, 142, 69, 148, 72, 149, 78, 153, 78, 158, 77, 159, 71, 160, 71, 166, 69, 170, 66, 171, 60, 168, 56, 164, 48, 166, 43, 166, 41, 164, 42, 159, 44, 155 )

[node name="personagem" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="personagem"]
position = Vector2( 58, 91 )
texture = ExtResource( 1 )

[node name="colisao_personagem" type="CollisionShape2D" parent="personagem"]
position = Vector2( 58, 91 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="personagem"]
collision_layer = 4
collision_mask = 4

[node name="colisao_area_personagem" type="CollisionShape2D" parent="personagem/Area2D"]
position = Vector2( 58, 91.25 )
shape = SubResource( 2 )

[node name="motor" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 6 )

[node name="coleta" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 4 )

[node name="morreu" type="AudioStreamPlayer2D" parent="personagem"]
stream = ExtResource( 5 )

[connection signal="body_entered" from="personagem/Area2D" to="personagem" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="personagem/Area2D" to="personagem" method="_on_Area2D_body_exited"]
[connection signal="finished" from="personagem/morreu" to="personagem" method="_on_morreu_finished"]
